# poetry_project

./: readme.md  teste.txt
flask_app_delivery/: pyproject.toml  requirements.txt
flask_app_delivery/tests/: test_flask_app_delivery.py
